# 7900-xtx-optimizer

./: .gitignore  GETTING_STARTED.md  LICENSE  MANIFEST.in  MANIFEST.md  README.md  RELEASE_DESCRIPTION.md  pyproject.toml  rdna3_atlas_constants.h  rdna3_optimization_guide.json  rdna3_optimization_guide.md  requirements.txt  schema.sql  setup.py
.github/workflows/: ci.yml
rdna3_optimization_layer/: __init__.py  atlas_loader.py  cli.py  demo_app.py  gpu_detect.py  launcher.py  policy.py
rdna3_optimization_layer/data/: gfx1100_atlas_profile.json
